--- a/potostyle.css
+++ b/potostyle.css
@@ -16,6 +16,7 @@ body {
      column-gap: 15px;
      padding: 20px;
      max-width: 1200px;
+    
     margin: auto;
     }
 
@@ -105,6 +106,6 @@ body {
 
     @media (max-width: 600px) {
       .portfolio-item {
-        height: 180px;
+        height: fit-content;
       }
     }
