--- a/potostyle.css
+++ b/potostyle.css
@@ -15,7 +15,8 @@ body {
      column-count: 3;
      column-gap: 15px;
      padding: 20px;
-     max-width: 1200px;
+     /* max-width: 1200px; */
+     max-width: fit-content;
     
     margin: auto;
     }
