--- a/potostyle.css
+++ b/potostyle.css
@@ -12,7 +12,7 @@ body {
     }
 
     .portfolio-grid {
-     column-count: 3;
+     column-count: 4;
      column-gap: 15px;
      padding: 20px;
      /* max-width: 1200px; */
@@ -26,6 +26,8 @@ body {
   display: inline-block;
   width: 100%;
   margin-bottom: 15px;
+  margin-left: 15px;
+  margin-right: 15px;
   border-radius: 10px;
   overflow: hidden;
   cursor: pointer;
@@ -91,6 +93,13 @@ body {
     margin: auto;
 }
 
+footer {
+    background-color: #111;
+    color: white;
+    text-align: center;
+    padding: 15px 0;
+    font-size: 0.9em;
+  }
 
     @media (max-width: 800px) {
      .portfolio-grid {
