--- a/style.css
+++ b/style.css
@@ -155,6 +155,7 @@
   .project .text {
     flex: 1;
     min-width: 280px;
+    padding-left: 12px;
   }
   
   .project .media {
@@ -191,6 +192,8 @@
   .projectn .text {
     flex: 1;
     min-width: 280px;
+    padding-left: 12px;
+    
   }
   
   .projectn .media {
