added 2 items to portfolio

--- a/style.css
+++ b/style.css
@@ -185,6 +185,10 @@
     line-height: 1.6;
 
   }
+  .somepara2{
+    font-size: 0.9rem; 
+    color: brown;
+  }
 
   /*mmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmm*/
     .projectn {
