--- a/style.css
+++ b/style.css
@@ -64,6 +64,27 @@
     background-color: #fff;
   }
   
+
+.responsive-iframe {
+      position: relative;
+      width: 100%;
+      padding-bottom: 0%; 
+      height: auto;
+      overflow: hidden;
+      height: fit-content;
+      max-height: none;
+    }
+
+.responsive-iframe iframe {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      border: 0;
+}
+
+
   .container {
     width: 90%;
     max-width: 1000px;
@@ -300,6 +321,11 @@
     flex: 0 0 auto;
     min-height: 200px; /* or your preferred height */
   }
+
+  
+
+
+  
 
     .gallery-container {
       max-width: 800px;
