--- a/style.css
+++ b/style.css
@@ -64,25 +64,23 @@
     background-color: #fff;
   }
   
-
 .responsive-iframe {
-      position: relative;
-      width: 100%;
-      padding-bottom: 0%; 
-      height: auto;
-      overflow: hidden;
-      height: fit-content;
-      max-height: none;
-    }
+            position: relative;
+            width: 100%;
+            max-width: 560px;
+            padding-bottom: 0; /* 16:9 aspect ratio */
+            height: 300px;
+            overflow: hidden;
+        }
+        .responsive-iframe iframe {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            border: 0;
+        }
 
-.responsive-iframe iframe {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      border: 0;
-}
 
 
   .container {
